MEC Production/MEC Production/src/objects/AccountSalesInfo__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>AccountSalesInfos</relationshipLabel>
        <relationshipName>AccountSalesInfos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CGRP__c</fullName>
        <label>CGRP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distribution_Channel__c</fullName>
        <label>Distribution Channel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Distribution Channel - Division</inlineHelpText>
        <label>Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_SGRP__c</fullName>
        <inlineHelpText>SAP Sales Group</inlineHelpText>
        <label>SAP SGRP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>AccountSalesInfo</label>
    <nameField>
        <label>AccountSalesInfo  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AccountSalesInfos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>